fix: Flickering list scrollbar edge case

--- a/client/src/components/List/List.module.scss
+++ b/client/src/components/List/List.module.scss
@@ -39,10 +39,12 @@
   .cardsInnerWrapper {
     padding-top: 3px;
     width: 272px;
+    overflow-y: hidden;
   }
 
   .cardsInnerWrapperScrollable {
     width: 269px;
+    overflow-y: auto;
   }
 
   .cardsOuterWrapper {
